--- a/20230321_helloidol/helloidol.html
+++ b/20230321_helloidol/helloidol.html
@@ -17,11 +17,26 @@
             <li>리즈</li>
             <li>이서</li>
         </ul>
+        <ul>
+            <li>유진</li>
+            <li>가을</li>
+            <li>레이</li>
+            <li>원영</li>
+            <li>리즈</li>
+            <li>이서</li>
+        </ul>
         <img src="https://image.xportsnews.com/contents/images/upload/article/2022/0117/mb_1642384182708012.jpg" alt="아이브">
     </div>
     
     <div>
         <h1>I-DLE</h1>
+        <ul>
+            <li>소연</li>
+            <li>미연🍜</li>
+            <li>민니</li>
+            <li>우기</li>
+            <li>슈화</li> 
+        </ul>
         <ul>
             <li>소연</li>
             <li>미연🍜</li>
@@ -37,5 +52,18 @@
         <input type="radio" name="gander" id="">
         
     </div>
-</body>
+    <center>
+        <h1>Hello world!</h1>
+        <h2>Hello world!</h2>
+        <h3>Hello world!</h3>
+        <h4>Hell world!</h4>
+        <h5>Hello world!</h5>
+        <h6>Hello world!</h6>
+        <h5>Hello world!</h5>
+        <h4>Hello world!</h4>
+        <h3>Hello world!</h3>
+        <h2>Hello world!</h2>
+        <h1>Hello world!</h1>
+    </center>
+    </body>
 </html>
