--- a/20230321_helloidol/helloidol.html
+++ b/20230321_helloidol/helloidol.html
@@ -7,6 +7,7 @@
     <title>WELLO IDOL</title>
 </head>
 <body>
+    <a href="https://google.com">구글</a>
     <div>
         <h1>아이브</h1>
         <ul>
