icon. Feather Icons, Bootstrap Icons

--- a/20230321_helloidol/helloidol.html
+++ b/20230321_helloidol/helloidol.html
@@ -5,26 +5,32 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WELLO IDOL</title>
+    <link rel="stylesheet" href="css/style.css">
+    <style>
+        h1{
+        background-color: grey;
+        }
+    </style>
 </head>
 <body>
     <a href="https://google.com">구글</a>
     <div>
-        <h1>아이브</h1>
+        <h1 style="color:white;">아이브</h1>
+        <ol>
+            <li id="leader" class="kor">유진</li>
+            <li class="kor">가을</li>
+            <li id="jp">레이</li>
+            <li class="kor" style="color: violet;">원영</li>
+            <li class="kor" id="five">리즈</li>
+            <li class="kor">이서</li>
+        </ol>
         <ul>
-            <li>유진</li>
-            <li>가을</li>
-            <li>레이</li>
-            <li>원영</li>
-            <li>리즈</li>
-            <li>이서</li>
-        </ul>
-        <ul>
-            <li>유진</li>
-            <li>가을</li>
-            <li>레이</li>
-            <li>원영</li>
-            <li>리즈</li>
-            <li>이서</li>
+            <li id="leader" class="kor">유진</li>
+            <li class="kor">가을</li>
+            <li id="jp">레이</li>
+            <li class="kor" style="color: violet;">원영</li>
+            <li class="kor" id="five">리즈</li>
+            <li class="kor">이서</li>
         </ul>
         <img src="https://image.xportsnews.com/contents/images/upload/article/2022/0117/mb_1642384182708012.jpg" alt="아이브">
     </div>
