--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -8,11 +8,12 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/style.css">
-
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
 <body>
     <header>
-        <nav class="nav contaniner"> <!--여러가지 클래스를 띄어쓰기로 구분-->
+        <nav class="nav container"> <!--여러가지 클래스를 띄어쓰기로 구분-->
             <a href="" class="nav-logo">
                 <i class="bi bi-bookmarks"></i>
             </a>
