--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -22,10 +22,12 @@
                 <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
                 <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
             </ul>
-            <div class="nav-toggle" id="nave_toggle">
+            <div class="nav-toggle" id="nav_toggle">
                 <i class="bi bi-list"></i>
             </div>
         </nav>
     </header>
+
+    <script src="js/navjs.js"></script>
 </body>
 </html>
