--- a/20230609_nav/index.html
+++ b/20230609_nav/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>navber</title>
+    <title>BOOK REVIEW CALENDAR</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/nav.css">
@@ -29,5 +29,6 @@
     </header>
 
     <script src="js/navjs.js"></script>
+    <script src="js/data.js"></script>
 </body>
 </html>
