--- a/20230620_bookreviewcalendar/index.html
+++ b/20230620_bookreviewcalendar/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>navber</title>
+    <title>BOOK REVIEW CALENDAR</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <link rel="stylesheet" href="css/reset.css">
     <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/bookshelf.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 </head>
@@ -27,7 +28,50 @@
             </div>
         </nav>
     </header>
-
+    <main class="bookshelf">
+        <div class="row-container">
+            <div class="book-item">
+            <img src="" alt="">    
+        </div>
+        <div class="book-item">
+            <img src="" alt="">    
+        </div>
+    </div>
+    <div class="row-container">
+        <div class="book-item">
+            <img src="" alt="">    
+        </div>
+        <div class="book-item">
+            <img src="" alt="">    
+        </div>
+    </div>
+    <div class="row-container">
+        <div class="book-item">
+            <img src="" alt="">    
+        </div>
+        <div class="book-item">
+            <img src="" alt="">    
+        </div>
+    </div>
+    <div class="row-container">
+        <div class="book-item">
+            <img src="" alt="">    
+        </div>
+        <div class="book-item">
+            <img src="" alt="">    
+        </div>
+    </div>
+    <div class="row-container">
+        <div class="book-item">
+            <img src="" alt="">    
+        </div>
+        <div class="book-item">
+            <img src="" alt="">    
+        </div>
+    </div>
+    </main>
+    <script src="js/data.js"></script>
     <script src="js/navjs.js"></script>
+    <script src="js/bookshelf.js"></script>
 </body>
 </html>
