--- a/20230620_bookreviewcalendar/review.html
+++ b/20230620_bookreviewcalendar/review.html
@@ -19,7 +19,7 @@
                 <i class="bi bi-bookmarks"></i>
             </a>
             <ul class="nav-list">
-                <li class="nav-item"><a href="" class="nav-link">책장</a></li>
+                <li class="nav-item"><a href="index.html" class="nav-link">책장</a></li>
                 <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
                 <li class="nav-item"><a href="" class="nav-link">캘린더</a></li>
             </ul>
@@ -38,7 +38,7 @@
                 <div class="info-group container">
                     <div class="info container">
                         <div class="title label">
-                            .title.label
+                            제목
                         </div>
                         <div class="title">
                             .title
@@ -46,7 +46,7 @@
                     </div>
                     <div class="info container">
                         <div class="author label">
-                            .author.label
+                            저자
                         </div>
                         <div class="author">
                             .author
@@ -56,7 +56,7 @@
                 <div class="info-group container">
                     <div class="info container">
                         <div class="publisher label">
-                            .publisher.label
+                            출판사
                         </div>
                         <div class="publisher">
                             .publisher
@@ -64,7 +64,7 @@
                     </div>
                     <div class="info container">
                         <div class="read-date label">
-                            .read-date.label
+                            읽은 날짜
                         </div>
                         <div class="read-date">
                             .read-date
@@ -77,18 +77,18 @@
         <div class="reviews container">
             <div class="review container">
                 <div class="synopsis label">
-                    .synopsis.label
+                    줄거리
                 </div>
                 <div class="synopsis">
-                    .synopsis
+                    <input type="text" placeholder="줄거리를 쓰세요.">
                 </div>
             </div>
             <div class="review container">
                 <div class="phrase label">
-                    .phrease.label
+                    마음에 드는 구절
                 </div>
                 <div class="phrase">
-                    .phrase
+                    <input type="text" placeholder="마음에 드는 구절을 쓰세요">
                 </div>
             </div>
         </div>
