--- a/20230620_bookreviewcalendar/calendar.html
+++ b/20230620_bookreviewcalendar/calendar.html
@@ -10,6 +10,8 @@
     <link rel="stylesheet" href="css/nav.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="css/calendar.css">
+
 </head>
 <body>
     <header>
@@ -19,7 +21,7 @@
             </a>
             <ul class="nav-list">
                 <li class="nav-item"><a href="index.html" class="nav-link">책장</a></li>
-                <li class="nav-item"><a href="" class="nav-link">리뷰</a></li>
+                <li class="nav-item"><a href="review.html" class="nav-link">리뷰</a></li>
                 <li class="nav-item"><a href="calendar.html" class="nav-link">캘린더</a></li>
             </ul>
             <div class="nav-toggle" id="nav_toggle">
@@ -28,9 +30,65 @@
         </nav>
     </header>
     <main id="calendar">
+        <!-- title <9월>-->
+        <div class="title flex-container">
+            <div class="left"><</div>
+            <div class="month">월</div>
+            <div class="right">></div>
+        </div>
+        <!-- weedy 일 월 화 수 목 금 토-->
+        <div class="weekday container">
+            <div class="weekday item">일</div>
+            <div class="weekday item">월</div>
+            <div class="weekday item">화</div>
+            <div class="weekday item">수</div>
+            <div class="weekday item">목</div>
+            <div class="weekday item">금</div>
+            <div class="weekday item">토</div>
+        </div>
+        <!-- dates 1 2 3 4 ... 30-->
+        <div class="dates container">
+            <div class="date item">1</div>
+            <div class="date item">2</div>
+            <div class="date item">3</div>
+            <div class="date item">4</div>
+            <div class="date item">5</div>
+            <div class="date item">6</div>
+            <div class="date item">7</div>
+            <div class="date item">8</div>
+            <div class="date item">9</div>
+            <div class="date item">10</div>
+            <div class="date item">11</div>
+            <div class="date item">12</div>
+            <div class="date item">13</div>
+            <div class="date item">14</div>
+            <div class="date item">15</div>
+            <div class="date item">16</div>
+            <div class="date item">17</div>
+            <div class="date item">18</div>
+            <div class="date item">19</div>
+            <div class="date item">20</div>
+            <div class="date item">21</div>
+            <div class="date item">22</div>
+            <div class="date item">23</div>
+            <div class="date item">24</div>
+            <div class="date item">25</div>
+            <div class="date item">26</div>
+            <div class="date item">27</div>
+            <div class="date item">28</div>
+            <div class="date item">29</div>
+            <div class="date item">30</div>
+        </div>
+        <!-- review-->
+        <div class="review flex-container">
+            <div class="book-title">제목 : 역행자</div>
+            <div class="book-read-date">읽은 날짜 : 2023년 09월 7일</div>
+            <div class="book-page">쪽수 : 47</div>
+        </div>
         
     </main>
     <script src="js/data.js"></script>
     <script src="js/navjs.js"></script>
+    <script src="js/calendar.js"></script>
 </body>
 </html>
