--- a/20230620_bookreviewcalendar/calendar.html
+++ b/20230620_bookreviewcalendar/calendar.html
@@ -33,7 +33,7 @@
         <!-- title <9월>-->
         <div class="title flex-container">
             <div class="left"><i class="bi bi-caret-left"></i></div>
-            <div class="month">9월</div>
+            <div class="month"></div>
             <div class="right"><i class="bi bi-caret-right"></i></div>
         </div>
         <!-- weedy 일 월 화 수 목 금 토-->
@@ -48,7 +48,7 @@
         </div>
         <!-- dates 1 2 3 4 ... 30-->
         <div class="dates container">
-            <div class="date item">1</div>
+            <!-- <div class="date item">1</div>
             <div class="date item">2</div>
             <div class="date item">3</div>
             <div class="date item">4</div>
@@ -77,7 +77,7 @@
             <div class="date item">27</div>
             <div class="date item">28</div>
             <div class="date item">29</div>
-            <div class="date item">30</div>
+            <div class="date item">30</div> -->
         </div>
         <!-- review-->
         <div class="review flex-container">
